--- a/.github/workflows/place-worker-cron-v2.yml
+++ b/.github/workflows/place-worker-cron-v2.yml
@@ -2,15 +2,15 @@ name: place-worker-cron-v2
 
 on:
   schedule:
-      workflow_dispatch:
-  workflow_dispatch:        # Manual trigger
+    - cron: "*/1 * * * *"   # 🔥 vsakih 1 minuto
+  workflow_dispatch:        # ročni zagon
 
 jobs:
   call-place-worker:
     runs-on: ubuntu-latest
 
     concurrency:
-      group: place-worker-cron-v2
+      group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: false
 
     steps:
@@ -21,23 +21,23 @@ jobs:
         run: |
           echo "Calling Supabase function..."
 
-          # Send POST to Supabase Edge Function
           HTTP_STATUS=$(curl -s -o response.txt -w "%{http_code}" \
             -X POST "$FUNCTION_URL" \
             -H "Authorization: Bearer $SUPABASE_SERVICE_ROLE" \
             -H "Content-Type: application/json" \
             --data '{"source":"github-cron"}')
 
+          echo "-------------------------------------"
           echo "Response body:"
           cat response.txt
           echo ""
           echo "HTTP status: $HTTP_STATUS"
+          echo "-------------------------------------"
 
-          # Check HTTP code
           if [ "$HTTP_STATUS" -ge 200 ] && [ "$HTTP_STATUS" -lt 300 ]; then
             echo "Supabase function executed successfully."
             exit 0
           else
-            echo "Supabase function failed."
+            echo "Supabase function failed (but workflow continues)."
             exit 0
           fi
